# image_processor

./: BMPReader.cpp  BMPReader.h  BMPWriter.cpp  BMPWriter.h  CMakeLists.txt  Color.cpp  Color.h  CropFilter.cpp  CropFilter.h  EdgeDetectionFilter.cpp  EdgeDetectionFilter.h  Filter.h  GaussianBlurFilter.cpp  GaussianBlurFilter.h  GrayScaleFilter.cpp  GrayScaleFilter.h  Image.cpp  Image.h  NegativeFilter.cpp  NegativeFilter.h  SharpeningFilter.cpp  SharpeningFilter.h  main.cpp
